--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,7 +2,7 @@
   <p-table #dt [loading]="loading" [responsive]="true" [columns]="cols" [value]="nfes">
     <ng-template pTemplate="caption" class="container-caption">
       <p-card class="container-filtros">
-        <div class="ui-g">
+        <div class="ui-g container-tipos-filtros">
           <div class="ui-g-6">
             <div class="ui-g">
               <p class="label-filtro">Tipo de filtro:</p>
@@ -31,10 +31,9 @@
                 </ng-template>
               </p-autoComplete>
             </div>
-
           </div>
           <div *ngIf="showData" class="ui-g-6">
-            <div class="ui-g">
+            <div class="ui-g filtro-data">
               <p class="label-filtro">Data:</p>
               <p-calendar (onSelect)="getByData($event)" placeholder="Data" [style]="{ 'padding-left':'35px'}"
                 [(ngModel)]="data" [defaultDate]="defaultDate" name="startAnalyze"></p-calendar>
@@ -42,7 +41,7 @@
 
           </div>
         </div>
-        <div class="ui-g">
+        <div class="ui-g container-filtros">
           <div class="ui-g item-radiogroup">
           <p-radioButton name="groupname" value="nfe" [(ngModel)]="selectedValueNfe"></p-radioButton>
             <h4  class="label-radiogroup">Somente nfe</h4>
@@ -60,6 +59,6 @@
 
     </ng-template>
   </p-table>
-  <app-nfe *ngIf="showNfe && selectedValueNfe == 'todos' || selectedValueNfe=='nfe'" [dataChart]="dataChart" [colunas]="cols" [valores]="nfes" [titulo]="'Nfe'"></app-nfe>
-  <app-nfe *ngIf="showNfeContingencia && selectedValueNfe == 'todos' || selectedValueNfe=='contingencia'" [dataChart]="dataChart" [colunas]="cols" [valores]="nfesContingencia" [titulo]="'Nfe em contigência'"></app-nfe>
+  <app-nfe *ngIf="showNfe && selectedValueNfe == 'todos' || selectedValueNfe=='nfe'" [dataChart]="dataChartNfe" [colunas]="cols" [valores]="nfes" [titulo]="'Nfe'"></app-nfe>
+  <app-nfe *ngIf="showNfeContingencia && selectedValueNfe == 'todos' || selectedValueNfe=='contingencia'" [dataChart]="dataChartNfeContigencia" [colunas]="cols" [valores]="nfesContingencia" [titulo]="'Nfe em contigência'"></app-nfe>
 </p-panel>
